# SplashSrv

./: .gitignore  Cargo.toml  LICENSE  README.md  cert.pem  key.pem
src/: login_server.rs  main.rs  stream.rs
src/data/: appearance.rs  character.rs  item.rs  mod.rs  record.rs  report.rs  shop.rs
src/db_task/: backend.rs  frontend.rs  mod.rs
src/gs2/: chara_mgmt.rs  conn_task.rs  game_mgmt.rs  lobby_mgmt.rs  mod.rs  record_mgmt.rs  shop_mgmt.rs  user_mgmt.rs
src/packets/: helpers.rs  mod.rs
